fix mobile issue

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <div class="container">
     <div class="row">
     
-      <div class="col-md-6"><img class="img-responsive" src="images/download_logo.png" alt="Udacity logo"></div>
-      <div class="col-md-6 text-right text-uppercase">
+      <div class="col-md-6 col-sm-6"><img class="img-responsive" src="images/download_logo.png" alt="Udacity logo"></div>
+      <div class="col-md-6 col-sm-6 text-right text-uppercase">
         <h1 class="title-super">Souvik Zaminder</h1>
         <h3>Front-end Developer</h3>
       </div>
